# otel-collector-proxy-python

./: .dockerignore  Dockerfile  pyproject.toml
.github/workflows/: cicd.yaml
otel_collector_proxy/: main.py
otel_collector_proxy/core/: config.py  data_type.py  exception_handlers.py  exceptions.py  logging.py  rate_limit.py  response.py
otel_collector_proxy/core/middleware/: configure.py  logging.py  prometheus.py  request_id.py
tests/: conftest.py  otel-collector-config.yaml  test_api.py  test_integration.py  test_rate_limit.py
